<resources>
    <string name="app_name">QuietInbox SMS</string>
    <string name="inbox">Inbox</string>
    <string name="unknown">Unknown</string>
    <string name="all">All</string>
    <string name="type_message">Type a message</string>
    <string name="send">Send</string>
    <string name="no_messages">No messages yet</string>
    <string name="new_message">New message</string>
    <string name="to_hint">To (phone number)</string>
    <string name="pick_contact">Pick a contact</string>
    <string name="search">Search messages</string>
    <string name="filter_title">Filter unsaved numbers</string>
    <string name="filter_summary">Move SMS from unsaved numbers to Unknown tab</string>
    <string name="mute_title">Mute Unknown notifications</string>
    <string name="mute_summary">Silent notifications for unsaved senders</string>
    <string name="set_default">Set as default</string>
    <string name="permissions_needed">SMS + Contacts permissions are needed to show and filter messages.</string>
    <string name="grant">Grant</string>
    <string name="unknown_sender">Unknown</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="blocked">Blocked</string>
    <string name="no_blocked">No blocked senders</string>
    <string name="block_confirm">Block this sender? Their messages will be hidden and muted.</string>
    <string name="unblock_confirm">Unblock this sender?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="delete_conversation_confirm">Delete this entire conversation? This cannot be undone.</string>
    <string name="delete_message_confirm">Delete this message?</string>
    <string name="delete_messages_confirm">Delete %1$d messages?</string>
    <string name="notification_sound">Notification sound</string>
    <string name="sound_default">Default system sound</string>
    <string name="sound_system_sound">Choose system sound…</string>
    <string name="sound_audio_file">Choose audio file…</string>
    <string name="sound_silent">Silent</string>
    <string name="sound_use_global">Use global setting</string>
    <string name="sound_saved">Sound saved</string>
    <string name="chat_bubbles">Chat bubbles</string>
    <string name="overlay_needed">Allow “Display over other apps” for bubbles to appear.</string>
</resources>
